feat: videos in homepage

--- a/index.html
+++ b/index.html
@@ -76,16 +76,24 @@
                             <span class="counter-number" id="minutesCounter">0</span>
                             <span class="counter-label">Minutes of Joy</span>
                         </div>
-                    </div>
+                    </div>                </div>                <div class="hero-image">
+                    <img src="FavouritePhoto.JPG" alt="Our favorite memory together" class="favorite-photo">
                 </div>
-                <div class="hero-image">
-                    <div class="image-placeholder">
-                        <i class="fas fa-camera"></i>
-                        <p>Add your favorite photo here</p>
+            </div>
+            
+            <!-- Together Video Section -->
+            <div class="together-video-section">
+                <div class="container">
+                    <h3 class="video-title">Our Journey Together 💕</h3>
+                    <div class="video-container">
+                        <video controls class="together-video" poster="FavouritePhoto.JPG">
+                            <source src="TogetherVideo.MP4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
                 </div>
             </div>
-        </section>        <!-- Gallery Section -->
+        </section><!-- Gallery Section -->
         <section id="gallery" class="section">
             <div class="container">
                 <h2 class="section-title">Our Beautiful Moments</h2>
