--- a/index.html
+++ b/index.html
@@ -205,6 +205,19 @@
                 </div>
             </div>
         </section>
+
+        <!-- Background Music -->
+        <audio id="bgMusic" loop preload="auto">
+            <source src="d4vd - Here With Me.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+
+        <!-- Music Control Button -->
+        <div id="musicControl" class="music-control">
+            <button id="musicToggle" class="music-toggle" title="Toggle Background Music">
+                <i class="fas fa-music"></i>
+            </button>
+        </div>
     </div>
 
     <script src="script.js"></script>
