fix: logout button aligned

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
                 <div class="timeline">
                     <div class="timeline-item left milestone">
                         <div class="timeline-content">
-                            <div class="timeline-date">October 1, 2023</div>
+                            <div class="timeline-date">September 29, 2023</div>
                             <h3>🌹 Official First Date</h3>
-                            <p>Making it official! Our first hand-made mooncake together - creating sweet memories and traditions from the start.</p>
+                            <p>Making it official! The Date I proposed and you said YES beside the burger shop.</p>
                         </div>
                     </div>
                     
