feat: dynamic date

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p class="hero-subtitle">Celebrating our beautiful journey together</p>
                     <div class="anniversary-date">
                         <i class="fas fa-calendar-heart"></i>
-                        <span>September 30, 2025</span>
+                        <span id="currentDate">Loading...</span>
                     </div>
                     <div class="love-counter">
                         <div class="counter-item">
