Add adorable dinosaur decorations throughout the website for girlfriend who loves dinosaurs 🦕💕🦖

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <div class="heart-animation">
                 <i class="fas fa-heart"></i>
             </div>
+            <div class="dino-animation">
+                🦕💕🦖
+            </div>
             <h2>Enter Our Secret Code</h2>
             <p>Only we know this special password 💕</p>
             <form id="loginForm">
@@ -33,18 +36,32 @@
             <div class="heart heart4">💗</div>
             <div class="heart heart5">💓</div>
         </div>
+        <div class="floating-dinosaurs">
+            <div class="dino dino1">🦕</div>
+            <div class="dino dino2">🦴</div>
+            <div class="dino dino3">🦖</div>
+            <div class="dino dino4">🦕</div>
+            <div class="dino dino5">🦴</div>
+            <div class="dino dino6">🦖</div>
+        </div>
     </div>
 
     <!-- Main Website -->
     <div id="mainContent" class="main-content hidden">
+        <!-- Cute dinosaur corner decorations -->
+        <div class="dino-corner top-left">🦕</div>
+        <div class="dino-corner top-right">🦖</div>
+        <div class="dino-corner bottom-left">🦴</div>
+        <div class="dino-corner bottom-right">🦕</div>
+        
         <!-- Header -->
         <header class="header">
-            <nav class="navbar">                <h1 class="logo">Our Love Story</h1>                <ul class="nav-links">
-                    <li><a href="#home" data-section="home">Home</a></li>
-                    <li><a href="#photos" data-section="photos">Photos</a></li>
-                    <li><a href="#videos" data-section="videos">Videos</a></li>
-                    <li><a href="#timeline" data-section="timeline">Timeline</a></li>
-                    <li><a href="#memories" data-section="memories">Love Note</a></li>
+            <nav class="navbar">                <h1 class="logo">🦕 Our Love Story 🦖</h1>                <ul class="nav-links">
+                    <li><a href="#home" data-section="home">🏠 Home</a></li>
+                    <li><a href="#photos" data-section="photos">📸 Photos</a></li>
+                    <li><a href="#videos" data-section="videos">🎥 Videos</a></li>
+                    <li><a href="#timeline" data-section="timeline">📅 Timeline</a></li>
+                    <li><a href="#memories" data-section="memories">🦕 Love Note</a></li>
                 </ul>
             </nav>
         </header>
@@ -53,8 +70,11 @@
         <section id="home" class="section active">
             <div class="hero">
                 <div class="hero-content">
-                    <h1 class="hero-title">Happy Anniversary!</h1>
-                    <p class="hero-subtitle">Celebrating our beautiful journey together</p>
+                    <h1 class="hero-title">Happy Anniversary! 🦕💕🦖</h1>
+                    <p class="hero-subtitle">Celebrating our beautiful journey together like two adorable dinosaurs in love</p>
+                    <div class="dino-love-message">
+                        <span class="dino-text">🦕 You're dino-mite! 🦖</span>
+                    </div>
                     <div class="anniversary-date">
                         <i class="fas fa-calendar-heart"></i>
                         <span id="currentDate">Loading...</span>
